<resources>
    <string name="app_name">Augmented Tour</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="image">mainimage</string>
    <string name="button">Button</string>
    <string name="todooo">TODO</string>
    <string name="tod00000o">TODO</string>
    <string name="tod00000000o">TODO</string>
    <string name="todo000000">TODO</string>
    <string name="textview">TextView</string>
    <string name="todo74">TODO</string>
    <string name="todo454">TODO</string>
    <string name="resturant">Resturant</string>
    <string name="todo4879">TODO</string>
    <string name="todo8946514">TODO89465</string>
    <string name="todo12347">TODO1234</string>
    <string name="todo1236547">TODO123654</string>
    <string name="stay121">Stay</string>
    <string name="textview456">TextView</string>
    <string name="uhkjkhkjhkjlh">Resturant</string>
    <string name="todo5746574">TODO57465</string>
    <string name="todo132454">TODO1324547878</string>
    <string name="_7567567">7567567909</string>
    <string name="todo34354">TODO343544657</string>
    <string name="todo124354">TODO12435489</string>
    <string name="todo09078867">TODO0907886711</string>
    <string name="_74364783564">7436478356488989</string>
    <string name="_563436">563436123</string>
    <string name="_2342434">2342434667</string>
    <string name="_86786">867868876</string>
    <string name="fuel">Fuel7678</string>
    <string name="_5667465">5667465878</string>
    <string name="fuel786">fuel</string>
    <string name="_9890">9890897</string>
    <string name="_7675654">767565400</string>
    <string name="hospital6767">Hospital</string>
    <string name="_9786">97860</string>
    <string name="shopping78">Shopping</string>
    <string name="masjid89">Masjid</string>
    <string name="_89078674">890786740</string>
    <string name="education000">Education</string>
    <string name="_67999">6799900</string>
    <string name="park12">Park</string>
    <string name="_978674">9786740</string>
    <string name="money0087">Money</string>
    <string name="_90544">9054407</string>
    <string name="entertainment7867">Entertainment</string>
    <string name="_906756">90675676</string>
    <string name="health89089">Health</string>
    <string name="pray878">Pray</string>
    <string name="_0775">07750</string>
    <string name="guesthouse12">GuestHouse</string>
    <string name="_6567">65679</string>
    <string name="hostels12">Hostels</string>
    <string name="petrolstation1">PetrolStation</string>
    <string name="_334">3347</string>
    <string name="aksskjskl">767856</string>
    <string name="fuel345">Fuel</string>
    <string name="fuel121">Fuel</string>
    <string name="_5625">56250</string>
    <string name="cngstation11">CngStation</string>
    <string name="hospitals123">Hospitals</string>
    <string name="resturant12">Resturant</string>
    <string name="delete">Delete</string>
    <string name="shownhere">shownhere</string>
    <string name="writename">writename</string>
    <string name="add">Add New Location</string>
    <string name="name">Name</string>
    <string name="move">Move</string>
    <string name="adress">adress</string>
    <string name="textview2">TextView</string>
    <string name="here">Here</string>
    <string name="deletee">Delete</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="poi_namee">Poi Name</string>
    <string name="welcome_to_abbottabad_touring">Abbottabad Touring</string>
    <string name="click_to_search">Search Location</string>
    <string name="add_poi">ADD New Location</string>
    <string name="_1133">113311</string>
    <string name="_4567">45670</string>
    <string name="easypaisa1">EasyPaisa11</string>
    <string name="malls">Malls113</string>
    <string name="_5768">576845</string>
    <string name="easypaisa">EasyPaisa11</string>
    <string name="malls13">Malls</string>
    <string name="easypaisa111">EasyPaisa</string>
    <string name="masjid11">Masjid</string>
    <string name="church11">Church</string>
    <string name="school11">School</string>
    <string name="college11">College</string>
    <string name="parks11">Parks</string>
    <string name="halls11">Halls</string>
    <string name="banks11">Banks</string>
    <string name="easypaisa11">EasyPaisa</string>
    <string name="shops11">Shops</string>
    <string name="mngloc">Manage Locations</string>
    <string name="add_poii">Add Poi</string>
    <string name="add_poiii">Add Poi</string>
    <string name="category">Category</string>
    <string name="addd">Add</string>
    <string name="list_all">Registered Locations</string>
    <string name="closse">Close</string>

    <color name="lime">#00FF00</color>
    <color name="Chocolate">#D2691E</color>
    <color name="DarkGoldenrod">#B8860B</color>
    <color name="RoyalBlue">#4169E1</color>
    <color name="Wheat">#F5DEB3</color>
    <color name="Silver">#C0C0C0</color>
    <color name="snow">#FFFAFA</color>

    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="font_size_small">10sp</dimen>
    <dimen name="font_size_medium">20sp</dimen>
    <dimen name="font_size_large">30sp</dimen>
</resources>
