<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text1"
    android:layout_width="fill_parent"


    android:layout_height="fill_parent"
    tools:context="com.example.abuzar.augmentedtour.FirstActivity"
    android:background="@color/RoyalBlue"

    >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button2"
        android:text="@string/mngloc"
        style="@android:style/Widget.Button"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        android:layout_marginBottom="90dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/snow"

        android:textColor="@color/RoyalBlue"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="13dp" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Button"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button2"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/snow"
        android:text="@string/click_to_search"
        android:textColor="@color/RoyalBlue"

        android:textSize="24sp"
        android:layout_alignLeft="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="600dp"
        android:layout_height="74dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/welcome_to_abbottabad_touring"
        android:textAllCaps="false"
        android:textColor="@color/snow"
        android:textSize="36sp"

        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

</RelativeLayout>


